--- a/clustering/ontarioparks.html
+++ b/clustering/ontarioparks.html
@@ -29,6 +29,10 @@
   </head>
   <body>
     <div id="map"></div>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&v=weekly"
+      async
+    ></script>
 
   </body>
 </html>
