--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -1,22 +1,22 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <style>
-      body {font-family: "Trebuchet MS","sans-serif";}    
-      body, html {width: 100%; height: 100%; margin: 0; padding: 0}  /* uses FlexBox https://www.w3schools.com/css/css3_flexbox.asp */
-      .row-container {display: flex; width: 100%; height: 100%; flex-direction: column; background-color: white; overflow: hidden;}
-      .first-row {background-color: grey; }
-      .second-row {flex-grow: 1; border: none; margin: 0; padding: 0;}
-      h1 {margin: 2px;}
-    </style>
-  </head>
 <body>
-  <div class="row-container">
-    <div class="first-row">
-      <h1>Sharkspotters MyMaps</h1>
-    </div>
 
-   <iframe src="https://www.google.com/maps/d/embed?mid=1-mgrqcu6-MvOCCo7QFM-fnn1Ay12Ukmu&ehbc=2E312F" height="100%"></iframe>
-  </div>
+<h1>My First Google Map</h1>
+
+<div id="googleMap" style="width:100%;height:400px;"></div>
+
+<script>
+function myMap() {
+var mapProp= {
+  center:new google.maps.LatLng(51.508742,-0.120850),
+  zoom:5,
+};
+var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+}
+</script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
+
 </body>
 </html>
