--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -2,7 +2,7 @@
 <html>
     <!--Adapted from https://developers.google.com/maps/documentation/javascript/marker-clustering#maps_marker_clustering-html-->
   <head>
-    <title>Marker Clustering</title>
+    <title>CaledonHawksHockey</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>   
     <script
@@ -17,13 +17,7 @@
         height: 100%;
         }
 
-        /* Optional: Makes the sample page fill the window. */
-        html,
-        body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-        }
+    
     </style>
 
   </head>
