--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -21,7 +21,7 @@
         body {
         height: 70%;
         margin: 0;
-        padding: 0;
+        padding-top: 40px;
         
     
     </style>
