--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -21,7 +21,7 @@
         body {
         height: 70%;
         margin: 0;
-        padding-top: 40px;
+        padding-top: 25px;
         
     
     </style>
@@ -30,7 +30,8 @@
   <body>
   
     <h1> OMHA Caledon Hawks Team Locations </h1> 
-    <div id="map"></div>
+    <div id="map">
+       </div>
 
   </body>
 </html>
