--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>CaledonHawksHockey</title>
-
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w&callback=initMap" defer> </script>
     <script src="CustomMap.js"></script>
   
