--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -1,27 +1,45 @@
-<!DOCTYPE html>
-<html>
+function initMap() {
+  const map = new google.maps.Map(document.getElementById("map"), {
+    zoom: 10,
+    center: { lat: -33.9, lng: 151.2 },
+  });
 
-<head>
-  <title>CaledonHawksHockey</title>
-  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w&callback=initMap" defer> </script>
-    <script src="CustomMap.js"></script>
-  
-    <style>
-      
-        #mymap {
-           height: 100%;
-        }
+  setMarkers(map);
+}
+
+
+const beaches = [
+  ["Bondi Beach", -33.890542, 151.274856, 4],
+  ["Coogee Beach", -33.923036, 151.259052, 5],
+  ["Cronulla Beach", -34.028249, 151.157507, 3],
+  ["Manly Beach", -33.80010128657071, 151.28747820854187, 2],
+  ["Maroubra Beach", -33.950198, 151.259302, 1],
+];
+
+function setMarkers(map) {
+
+  const image = {
+    url: "https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png",
+    size: new google.maps.Size(20, 32),
+    origin: new google.maps.Point(0, 0),
+    anchor: new google.maps.Point(0, 32),
+  };
  
-    
-     </style>
+  const shape = {
+    coords: [1, 1, 1, 20, 18, 20, 18, 1],
+    type: "poly",
+  };
 
-</head>
-<body>
-  
-    <h1> OMHA Caledon Hawks Team Locations </h1> 
-    <div id="mymap">
-       </div>
+  for (let i = 0; i < beaches.length; i++) {
+    const beach = beaches[i];
 
-  </body>
-</html>
+    new google.maps.Marker({
+      position: { lat: beach[1], lng: beach[2] },
+      map,
+      icon: image,
+      shape: shape,
+      title: beach[0],
+      zIndex: beach[3],
+    });
+  }
+}
