--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -15,7 +15,7 @@
 
 
         const beaches = [
-          ["Bondi Beach", -33.890542, 151.274856, 4],
+          ["Caledon East Arena", -33.890542, 151.274856, 4],
           ["Coogee Beach", -33.923036, 151.259052, 5],
           ["Cronulla Beach", -34.028249, 151.157507, 3],
           ["Manly Beach", -33.80010128657071, 151.28747820854187, 2],
@@ -52,5 +52,6 @@
     </script>
   </head>
   <body>
+    <h1>OMHA Caledon Hawks Hockey</h1>
   </body>
   
