--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <title>OMHA Caledon Hawks Hockey</title>
-
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w&callback=initMap"
+      defer>
+      </script>
     <script>
         function initMap() {
           const map = new google.maps.Map(document.getElementById("map"), {
