--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -2,10 +2,7 @@
 <html>
   <head>
     <title>OMHA Caledon Hawks Hockey</title>
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w&callback=initMap"
-      defer>
-      </script>
+
     <script>
         function initMap() {
           const map = new google.maps.Map(document.getElementById("map"), {
@@ -58,6 +55,9 @@
   </head>
   <body>
     <h1>OMHA Caledon Hawks Hockey</h1>
-    <div id="map"></div>
+    <div id="map"></div><script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w&callback=initMap"
+    async>
+  </script>
   </body>
   
