--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -55,7 +55,8 @@
   </head>
   <body>
     <h1>OMHA Caledon Hawks Hockey</h1>
-    <div id="map"></div><script
+    <div id="map"></div>
+    <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w&callback=initMap"
     async>
   </script>
