--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -57,6 +57,20 @@
         }
     </script>
     <style> 
+
+      #map {
+         height: 100%;
+        }
+
+        html,
+        body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        }
+
+
+
     </style>
   </head>
   <body>
