Change zoom to zoom in

--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -6,7 +6,7 @@
     <script>
         function initMap() {
           const map = new google.maps.Map(document.getElementById("map"), {
-            zoom: 6,
+            zoom: 8,
             center: { lat: 43.732, lng: -80.397 },
           });
 
@@ -26,6 +26,15 @@
           ["Markham Village Arena", 43.876334, -79.257759, 10],
           ["Elvis Stojko Arena", 43.858389, -79.422211, 11],
           ["Al Palladini Community Centre", -43.816672, -79.597246, 12]
+          ["Al Palladini Community Centre", -43.816672, -79.597246, 13]
+          ["Al Palladini Community Centre", -43.816672, -79.597246, 14]
+          ["Al Palladini Community Centre", -43.816672, -79.597246, 15]
+          ["Al Palladini Community Centre", -43.816672, -79.597246, 16]
+          ["Al Palladini Community Centre", -43.816672, -79.597246, 17]
+          ["Al Palladini Community Centre", -43.816672, -79.597246, 18]
+          ["Al Palladini Community Centre", -43.816672, -79.597246, 19]
+          ["Al Palladini Community Centre", -43.816672, -79.597246, 20]
+
         ];
 
         function setMarkers(map) {
