Adding more marker points

--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -26,14 +26,14 @@
           ["Markham Village Arena", 43.876334, -79.257759, 10],
           ["Elvis Stojko Arena", 43.858389, -79.422211, 11],
           ["Al Palladini Community Centre", -43.816672, -79.597246, 12]
-          ["Al Palladini Community Centre", -43.816672, -79.597246, 13]
-          ["Al Palladini Community Centre", -43.816672, -79.597246, 14]
-          ["Al Palladini Community Centre", -43.816672, -79.597246, 15]
-          ["Al Palladini Community Centre", -43.816672, -79.597246, 16]
-          ["Al Palladini Community Centre", -43.816672, -79.597246, 17]
-          ["Al Palladini Community Centre", -43.816672, -79.597246, 18]
-          ["Al Palladini Community Centre", -43.816672, -79.597246, 19]
-          ["Al Palladini Community Centre", -43.816672, -79.597246, 20]
+          ["East Gwillumbury Sports Complex", 44.107103, -79.427203, 13]
+          ["Startford Rotary Complex", 43.387128, -80.984068, 14]
+          ["Eastview Arena", 44.406060, -79.659042, 15]
+          ["National Training Rinks", 44.353869, -79.668049, 16]
+          ["Joshua's Creek Arenas", 43.494615, -79.675752, 17]
+          ["Glen Abbey Community Centre", 43.436805, -79.737721, 18]
+          ["Aldershot Arena", 43.320129, -79.833456, 19]
+          ["Mayfield Arena", 43.775265, -79.783464, 20]
 
         ];
 
