--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -69,6 +69,7 @@
 
       #map {
          height: 100%;
+         width: auto;
         }
 
         html,
@@ -77,6 +78,8 @@
         margin: 0;
         padding-top: 15px ;
         }
+
+
 
 
 
@@ -89,5 +92,8 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w&callback=initMap&v=weekly"
     async>
   </script>
+
+  <p> The locations shown above show the arena's within the Toronto region extending all the way to Owen Sound and St.Catherines. These are some of the various arenas that the OMHA (Ontario
+    Minor Hockey Association) teams play in. There are teams in the OMHA spread throughout Ontario, but mainly Southern Ontario. </p>
   </body>
   
