--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -39,6 +39,7 @@
 
         function setMarkers(map) {
 
+          //This specifies the locations of the marker in relativity to the map
           const image = {
             url: "https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png",
             size: new google.maps.Size(20, 32),
@@ -80,7 +81,14 @@
         }
 
 
+      h1 {
+        text-align: center;
+        color: red;
+      }
 
+      body {
+        color: lightslategray ;
+      }
 
 
     </style>
