--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -90,7 +90,11 @@
 
       p{
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        color: whitesmoke;
+        color: black;
+      }
+
+      body{
+        background-color: lightgrey;
       }
 
     </style>
