--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -84,7 +84,7 @@
       h1{
         text-align: center;
         color: red;
-        font-size: x-large;
+        font-size: 50pt;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
       }
 
