--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -77,7 +77,7 @@
         body{
         height: 70%;
         margin: 0;
-        padding-top: 15px ;
+        padding-top: 10px ;
         }
 
 
@@ -89,6 +89,7 @@
       }
 
       p{
+        text-align: center;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         color: black;
       }
