--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -88,6 +88,9 @@
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
       }
 
+      .Background{
+        background-color: darkgrey ;
+      }
       p{
         text-align: center;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -101,7 +104,7 @@
     </style>
   </head>
   <body>
-    <h1>OMHA Caledon Hawks Hockey</h1>
+    <h1 class="Background">OMHA Caledon Hawks Hockey</h1>
     <div id="map"></div>
     <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w&callback=initMap&v=weekly"
