Background change wiht div

--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -104,7 +104,10 @@
     </style>
   </head>
   <body>
-    <h1 class="Background">OMHA Caledon Hawks Hockey</h1>
+    <div class = "Background">
+    <h1>OMHA Caledon Hawks Hockey</h1>
+      </div>
+
     <div id="map"></div>
     <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w&callback=initMap&v=weekly"
