--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -79,18 +79,18 @@
         margin: 0;
         padding-top: 10px ;
         }
+      
+      .Background{
+        background-color: darkgrey ;
+      }
 
-
-      h1{
+      .title{
         text-align: center;
         color: red;
         font-size: 50pt;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
       }
 
-      .Background{
-        background-color: darkgrey ;
-      }
       p{
         text-align: center;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -104,8 +104,8 @@
     </style>
   </head>
   <body>
-    <div class = "Background">
-    <h1>OMHA Caledon Hawks Hockey</h1>
+    <div class= "Background">
+    <h1 class="title">OMHA Caledon Hawks Hockey</h1>
       </div>
 
     <div id="map"></div>
