--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -81,7 +81,9 @@
         }
       
       .Background{
-        background-color: darkgrey ;
+        background-color: darkgrey;
+        padding-top:20px;
+        padding-bottom: 10px;
       }
 
       .title{
@@ -104,7 +106,7 @@
     </style>
   </head>
   <body>
-    <div class= "Background">
+    <div class="Background">
     <h1 class="title">OMHA Caledon Hawks Hockey</h1>
       </div>
 
