--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -82,7 +82,7 @@
       
       .Background{
         background-color: darkgrey;
-        padding-top:45px;
+        padding:20px;
         
       }
 
