Margins and padding

--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -110,7 +110,9 @@
         color: darkgrey ;
         background-color: black ;
         border: black;
-        padding: 25px;
+        text-align: center;
+        margin: 0%;
+        padding: 30px;
 
       }
 
