--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -83,7 +83,7 @@
       
   
 
-      h1{
+      .title{
         text-align: center;
         color: red;
         background-color: darkgrey;
@@ -116,11 +116,15 @@
 
       }
 
+      h1{
+        color: red;
+      }
+
     </style>
   </head>
   <body>
     
-    <h1>OMHA Caledon Hawks Hockey</h1>
+    <h1 class="Title">OMHA Caledon Hawks Hockey</h1>
     <div id="map"></div>
     <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w&callback=initMap&v=weekly"
@@ -133,6 +137,16 @@
         hockey you play and the league you are in. The lower the level, typically results in less travelling. As this increases, the distance of teams will increase as more and better competition
         is now in your league. This is why Owen sound and St.Catherines are shown within the map. In my experience, I started at the AE level and went up to AA. This increased the scope of teams 
         and distance changes can then be seen throughout the map by the general locations of the arenas.  </p>
+
+
+    <h1>Caledon Hawks Home Arenas</h1>
+
+    <h2>Caledon East arena</h2>
+    <p class="arena"> Caledon East is one of the newer ice complexes within the region of Caledon. This arena has two pads of ice and is now the new home for the majority of Caledon Rep hockey.</p>
+
+    <h2>Mayfield Arena</h2>
+    <p class="arena"> Mayfield arena is the older ice complex within the region of Caledon and was the home arena of the rep program when I played 5 years ago. Now it has transitioned to being
+      primarily used for team practices rather then games.</p>
   </body>
   
   <footer>
