--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -118,8 +118,17 @@
 
       h1{
         color: red;
+        text-align: center;
       }
 
+      h2{
+        color: black;
+  
+      }
+
+      .arena{
+        color: black;
+      }
     </style>
   </head>
   <body>
