--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -96,7 +96,7 @@
         
       }
 
-      p{
+      .Generalinfo{
         text-align: center;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         color: black;
@@ -116,7 +116,7 @@
 
       }
 
-      h1{
+      .HeaderTitle{
         color: red;
         text-align: center;
       }
@@ -140,7 +140,7 @@
     async>
   </script>
 
-    <p> The locations shown above show the arena's within the Toronto region extending all the way to Owen Sound and St.Catherines. These are some of the various arenas that the OMHA (Ontario
+    <p class="Generalinfo"> The locations shown above show the arena's within the Toronto region extending all the way to Owen Sound and St.Catherines. These are some of the various arenas that the OMHA (Ontario
         Minor Hockey Association) teams play in. There are teams in the OMHA spread throughout Ontario, but mainly Southern Ontario. The markers above indicate some fo the locations which I have 
         personally played at throughout my rebp hockey career for Caledon. The spatial distrinution appears to be clustered near Toronto and Missisauga and this is strictly due to the level of 
         hockey you play and the league you are in. The lower the level, typically results in less travelling. As this increases, the distance of teams will increase as more and better competition
@@ -148,7 +148,7 @@
         and distance changes can then be seen throughout the map by the general locations of the arenas.  </p>
 
 
-    <h1>Caledon Hawks Home Arenas</h1>
+    <h1 class="HeaderTitle">Caledon Hawks Home Arenas</h1>
 
     <h2>Caledon East arena</h2>
     <p class="arena"> Caledon East is one of the newer ice complexes within the region of Caledon. This arena has two pads of ice and is now the new home for the majority of Caledon Rep hockey.</p>
