Marging for header title

--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -119,6 +119,8 @@
       .HeaderTitle{
         color: red;
         text-align: center;
+        background-color: darkgrey;
+        margin: 0%;
       }
 
       h2{
