--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -83,7 +83,7 @@
       
   
 
-      .title{
+      .Title{
         text-align: center;
         color: red;
         background-color: darkgrey;
@@ -120,7 +120,7 @@
         color: red;
         text-align: center;
         background-color: darkgrey;
-        margin: 0%;
+        margin: ;
       }
 
       h2{
