--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -120,7 +120,7 @@
         color: red;
         text-align: center;
         background-color: darkgrey;
-        margin: ;
+        margin: 0%;
       }
 
       h2{
