--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -98,6 +98,7 @@
         text-align: center;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         color: black;
+        margin: 2%;
       }
 
       body{
