--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -110,6 +110,7 @@
         background-color: black ;
         border: black;
         text-align: center;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         margin: 0%;
         padding: 30px;
 
@@ -118,17 +119,20 @@
       .HeaderTitle{
         color: red;
         text-align: center;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         background-color: darkgrey;
         margin: 0%;
       }
 
       h2{
         color: black;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   
       }
 
       .arena{
         color: black;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
       }
     </style>
   </head>
