Image for points

--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -41,7 +41,7 @@
 
           //This specifies the locations of the marker in relativity to the map
           const image = {
-            url: "https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png",
+            icon: Arenas + "BlackIcon.jpg",
             size: new google.maps.Size(20, 32),
             origin: new google.maps.Point(0, 0),
             anchor: new google.maps.Point(0, 32),
