--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -40,8 +40,10 @@
         function setMarkers(map) {
 
           //This specifies the locations of the marker in relativity to the map
-          const image = {
-            icon: Arenas + "BlackIcon.jpg",
+          const iconBase =
+            "https://github.com/JustinBrassard88/pl1/story/"
+          const icon = {
+            icon: iconBase + "BlackIcon.jpg",
             size: new google.maps.Size(20, 32),
             origin: new google.maps.Point(0, 0),
             anchor: new google.maps.Point(0, 32),
