--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -42,7 +42,7 @@
           //This specifies the locations of the marker in relativity to the map
           const iconBase =
             "https://github.com/JustinBrassard88/pl1/story/"
-          const icon = {
+          const image = {
             icon: iconBase + "BlackIcon.jpg",
             size: new google.maps.Size(20, 32),
             origin: new google.maps.Point(0, 0),
