--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -43,7 +43,7 @@
           const iconBase =
             "https://github.com/JustinBrassard88/pl1/story/BlackIcon.jpg"
           const image = {
-            icon: iconBase + "BlackIcon.jpg",
+            icon: iconBase,
             size: new google.maps.Size(20, 32),
             origin: new google.maps.Point(0, 0),
             anchor: new google.maps.Point(0, 32),
