--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -14,26 +14,26 @@
         }
 
         const Arenas = [
-          ["Caledon East Arena", 43.874028, -79.860700, 1, "stadium.svg" ],
-          ["CAA Centre", 43.669281, -79.707258, 2], "stadium.svg" ,
-          ["Brampton Memorial Arena", 43.680556, -79.759080, 3, "stadium.svg" ],
-          ["Harry Lumley Bayshore Community Centre", 44.579675, -80.934134, 4, "stadium.svg" ],
-          ["Centre  Wellington Community Sportsplex", 43.706488, -80.359903, 5, "stadium.svg" ],
-          ["Hespeler Memorial Arena", 43.433273, -80.291736, 6, "stadium.svg" ],
-          ["Garden City Arena", 43.161805, -79.238946, 7, "stadium.svg" ],
-          ["FirstOntario Centre", 43.259152, -79.872282, 8, "stadium.svg" ],
-          ["Centennial Arena", 43.522935, -80.251305, 9, "stadium.svg" ],
-          ["Markham Village Arena", 43.876334, -79.257759, 10, "stadium.svg" ],
-          ["Elvis Stojko Arena", 43.858389, -79.422211, 11, "stadium.svg" ],
-          ["Al Palladini Community Centre", -43.816672, -79.597246, 12, "stadium.svg" ],
-          ["East Gwillumbury Sports Complex", 44.107103, -79.427203, 13, "stadium.svg" ],
-          ["Startford Rotary Complex", 43.387128, -80.984068, 14, "stadium.svg" ],
-          ["Eastview Arena", 44.406060, -79.659042, 15, "stadium.svg" ],
-          ["National Training Rinks", 44.353869, -79.668049, 16, "stadium.svg" ],
-          ["Joshua's Creek Arenas", 43.494615, -79.675752, 17, "stadium.svg" ],
-          ["Glen Abbey Community Centre", 43.436805, -79.737721, 18, "stadium.svg" ],
-          ["Aldershot Arena", 43.320129, -79.833456, 19, "stadium.svg" ],
-          ["Mayfield Arena", 43.775265, -79.783464, 20, "stadium.svg" ]
+          ["Caledon East Arena", 43.874028, -79.860700, 1, "stadium.png" ],
+          ["CAA Centre", 43.669281, -79.707258, 2], "stadium.png" ,
+          ["Brampton Memorial Arena", 43.680556, -79.759080, 3, "stadium.png" ],
+          ["Harry Lumley Bayshore Community Centre", 44.579675, -80.934134, 4, "stadium.png" ],
+          ["Centre  Wellington Community Sportsplex", 43.706488, -80.359903, 5, "stadium.png" ],
+          ["Hespeler Memorial Arena", 43.433273, -80.291736, 6, "stadium.png" ],
+          ["Garden City Arena", 43.161805, -79.238946, 7, "stadium.png" ],
+          ["FirstOntario Centre", 43.259152, -79.872282, 8, "stadium.png" ],
+          ["Centennial Arena", 43.522935, -80.251305, 9, "stadium.png" ],
+          ["Markham Village Arena", 43.876334, -79.257759, 10, "stadium.png" ],
+          ["Elvis Stojko Arena", 43.858389, -79.422211, 11, "stadium.png" ],
+          ["Al Palladini Community Centre", -43.816672, -79.597246, 12, "stadium.png" ],
+          ["East Gwillumbury Sports Complex", 44.107103, -79.427203, 13, "stadium.png" ],
+          ["Startford Rotary Complex", 43.387128, -80.984068, 14, "stadium.png" ],
+          ["Eastview Arena", 44.406060, -79.659042, 15, "stadium.png" ],
+          ["National Training Rinks", 44.353869, -79.668049, 16, "stadium.png" ],
+          ["Joshua's Creek Arenas", 43.494615, -79.675752, 17, "stadium.png" ],
+          ["Glen Abbey Community Centre", 43.436805, -79.737721, 18, "stadium.png" ],
+          ["Aldershot Arena", 43.320129, -79.833456, 19, "stadium.png" ],
+          ["Mayfield Arena", 43.775265, -79.783464, 20, "stadium.png" ]
 
         ];
 
