--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -57,7 +57,7 @@
             new google.maps.Marker({
               position: { lat: Arena[1], long: Arena[2] },
               map,
-              icon: image[i][4],
+              icon: Arenas[i][4],
               shape: shape,
               Title: Arena[0],
               Number: Arena[3],
