--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -59,7 +59,7 @@
               map,
               icon: Arena[i][4],
               shape: shape,
-              Title: Arena[0],
+              title: Arena[0],
               Number: Arena[3],
             });
           }
