--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -40,7 +40,7 @@
         function setMarkers(map) {
 
           //This specifies the locations of the marker in relativity to the map
-          const image = {
+          const icon = {
             size: new google.maps.Size(20, 32),
             origin: new google.maps.Point(0, 0),
             anchor: new google.maps.Point(0, 32),
