--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -55,7 +55,7 @@
             const Arena = Arenas[i];
 
             new google.maps.Marker({
-              position: { lat: Arena[1], long: Arena[2] },
+              position: { lat: Arena[1], lng: Arena[2] },
               map,
               icon: Arena[i][4],
               shape: shape,
