--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -52,7 +52,7 @@
           };
 
           for (let i = 0; i < Arenas.length; i++) {
-            const Arena = Arenas[i];
+            const Arena = Arenas;
 
             new google.maps.Marker({
               position: { lat: Arena[1], lng: Arena[2] },
