--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -57,7 +57,7 @@
             new google.maps.Marker({
               position: { lat: Arena[1], lng: Arena[2] },
               map,
-              icon: Arena[i][4],
+              icon: Arena[4],
               shape: shape,
               title: Arena[0],
               Number: Arena[3],
