Tryign to fix locations

--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -33,7 +33,7 @@
           ["Joshua's Creek Arenas", 43.494615, -79.675752, 17, "stadium.png" ],
           ["Glen Abbey Community Centre", 43.436805, -79.737721, 18, "stadium.png" ],
           ["Aldershot Arena", 43.320129, -79.833456, 19, "stadium.png" ],
-          ["Mayfield Arena", 43.775265, -79.783464, 20, "stadium.png" ]
+          ["Mayfield Arena", 43.775265, -79.783464, 20, "stadium.png" ],
 
         ];
 
