--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -25,9 +25,9 @@
           ["Centennial Arena", 43.522935, -80.251305, 9, "stadium.png" ],
           ["Markham Village Arena", 43.876334, -79.257759, 10, "stadium.png" ],
           ["Elvis Stojko Arena", 43.858389, -79.422211, 11, "stadium.png" ],
-          ["Al Palladini Community Centre", -43.816672, -79.597246, 12, "stadium.png" ],
+          ["Al Palladini Community Centre", 43.816672, -79.597246, 12, "stadium.png" ],
           ["East Gwillumbury Sports Complex", 44.107103, -79.427203, 13, "stadium.png" ],
-          ["Startford Rotary Complex", 43.387128, -80.984068, 14, "stadium.png" ],
+          ["Stratford Rotary Complex", 43.387128, -80.984068, 14, "stadium.png" ],
           ["Eastview Arena", 44.406060, -79.659042, 15, "stadium.png" ],
           ["National Training Rinks", 44.353869, -79.668049, 16, "stadium.png" ],
           ["Joshua's Creek Arenas", 43.494615, -79.675752, 17, "stadium.png" ],
