--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -70,7 +70,7 @@
             const icon = type.icon;
             const div = document.createElement("div");
 
-            div.innerHTML = icon + name;
+            div.innerHTML = icon + title;
             legend.appendChild(div);
           }
 
