Final lat long edits more accurate

--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -21,26 +21,26 @@
         // Inspired from github folder for Complex Markers
         //Creates Location Markers with PNG image for custom marker
         const Arenas = [
-          ["Caledon East Arena", 43.874028, -79.860700, 1, "stadium.png" ],
-          ["CAA Centre", 43.669281, -79.707258, 2, "stadium.png" ],
-          ["Brampton Memorial Arena", 43.680556, -79.759080, 3, "stadium.png" ],
-          ["Harry Lumley Bayshore Community Centre", 44.579675, -80.934134, 4, "stadium.png" ],
-          ["Centre  Wellington Community Sportsplex", 43.706488, -80.359903, 5, "stadium.png" ],
-          ["Hespeler Memorial Arena", 43.433273, -80.291736, 6, "stadium.png" ],
-          ["Garden City Arena", 43.161805, -79.238946, 7, "stadium.png" ],
-          ["FirstOntario Centre", 43.259152, -79.872282, 8, "stadium.png" ],
-          ["Centennial Arena", 43.522935, -80.251305, 9, "stadium.png" ],
-          ["Markham Village Arena", 43.876334, -79.257759, 10, "stadium.png" ],
-          ["Elvis Stojko Arena", 43.858389, -79.422211, 11, "stadium.png" ],
-          ["Al Palladini Community Centre", 43.816672, -79.597246, 12, "stadium.png" ],
-          ["East Gwillumbury Sports Complex", 44.107103, -79.427203, 13, "stadium.png" ],
-          ["Stratford Rotary Complex", 43.387128, -80.984068, 14, "stadium.png" ],
-          ["Eastview Arena", 44.406060, -79.659042, 15, "stadium.png" ],
-          ["National Training Rinks", 44.353869, -79.668049, 16, "stadium.png" ],
-          ["Joshua's Creek Arenas", 43.494615, -79.675752, 17, "stadium.png" ],
-          ["Glen Abbey Community Centre", 43.436805, -79.737721, 18, "stadium.png" ],
-          ["Aldershot Arena", 43.320129, -79.833456, 19, "stadium.png" ],
-          ["Mayfield Arena", 43.775265, -79.783464, 20, "stadium.png" ],
+          ["Caledon East Arena", 43.874101196866874, -79.86000044235615, 1, "stadium.png" ],
+          ["CAA Centre", 43.66748097782542, -79.70759705781691, 2, "stadium.png" ],
+          ["Brampton Memorial Arena", 43.679048818084496, -79.75874645966024, 3, "stadium.png" ],
+          ["Harry Lumley Bayshore Community Centre", 44.580178255490594, -80.93451459275066, 4, "stadium.png" ],
+          ["Centre  Wellington Community Sportsplex", 43.7066553170465, -80.35988997315518, 5, "stadium.png" ],
+          ["Hespeler Memorial Arena", 43.42806138136378, -80.29223455538883, 6, "stadium.png" ],
+          ["Garden City Arena", 43.160686317518824, -79.2388495424897, 7, "stadium.png" ],
+          ["FirstOntario Centre", 43.26773026813019, -79.87263461276655, 8, "stadium.png" ],
+          ["Centennial Arena", 43.52273292577179, -80.25134805966394, 9, "stadium.png" ],
+          ["Markham Village Arena", 43.87394203086149, -79.25801958295946, 10, "stadium.png" ],
+          ["Elvis Stojko Arena", 43.85597253428125, -79.42239271363839, 11, "stadium.png" ],
+          ["Al Palladini Community Centre", 43.816701291967924, -79.59719062897848, 12, "stadium.png" ],
+          ["East Gwillumbury Sports Complex", 44.107049665407324, -79.42713920198034, 13, "stadium.png" ],
+          ["Stratford Rotary Complex", 43.38622840044412, -80.98367287316283, 14, "stadium.png" ],
+          ["Eastview Arena", 44.4055451330007, -79.65884857313823, 15, "stadium.png" ],
+          ["National Training Rinks", 44.35349283687241, -79.66797398294786, 16, "stadium.png" ],
+          ["Joshua's Creek Arenas", 43.491980265848625, -79.67621403082993, 17, "stadium.png" ],
+          ["Glen Abbey Community Centre", 43.43566383062689, -79.73896005782244, 18, "stadium.png" ],
+          ["Aldershot Arena", 43.316773895786646, -79.83322151733853, 19, "stadium.png" ],
+          ["Mayfield Arena", 43.77525764451859, -79.7834112289795, 20, "stadium.png" ],
 
         ];
 
